<resources>
    <string name="app_name">WanAndroid</string>
    <string name="all_user_name">UserName</string>
    <string name="all_password">Password</string>
    <string name="all_login">Sign in</string>
    <string name="all_welcome_wan_android">Sign in WanAndroid</string>
    <string name="all_tips_not_register">You don\'t have an account yet?</string>
    <string name="all_register">Register</string>
    <string name="all_try_it_now">Try now</string>
    <string name="all_exception_unknown">Unknown exception</string>

    <!--搜索-->
    <string name="all_search_hint">Search for your interest</string>
    <string name="all_search">Search</string>
    <string name="all_guess_what">Guess you want to search</string>
    <string name="all_clear_search_history">Clear search history</string>
    <!--首页-->
    <string name="all_nav_home">Home</string>
    <string name="all_nav_find">Find</string>
    <string name="all_nav_mine">Mine</string>

    <string name="all_article_author">Author</string>
    <string name="all_article_sharer">Sharer</string>
    <string name="all_location_failed_reason">Location failure: cause:</string>
    <string name="all_weather_failed_reason">Weather request failed, reason:%1$s</string>
    <string name="all_not_login">Not logged in</string>
    <string name="all_sign">Sign in</string>
    <string name="all_signed">Signed in</string>
    <string name="all_mine_about">About</string>
    <string name="all_coin_count">Coin：%s</string>
    <string name="all_coin_level">Level：%s</string>
    <string name="all_mine_share">Share</string>
    <string name="all_mine_todo">Todo</string>
    <string name="all_tixi">System</string>
    <string name="all_navigation">Navigation</string>
    <string name="all_project">Project</string>
    <string name="all_confirm">OK</string>
    <string name="all_font_scale_title">Text Size</string>
    <string name="all_font_scale_example">This project is developed based on open API. The main function is to provide a platform for Android developers to read technical articles. At the same time, the project mainly uses kotlin as the development language, and uses livedata and viewmode in jetpack for development.</string>

    <!--知识体系-->
    <string name="all_system_title">Knowledge System</string>
    <string name="all_system_column_title">Knowledge System Column</string>
    <string name="all_target_column_title">%s Column</string>

    <!--导航-->
    <string name="all_navigation_title">Navigation</string>

    <!--项目-->
    <string name="all_project_title">Project</string>

    <!--关于-->
    <string name="all_title_about">About</string>
    <string name="all_abount_version">Version：</string>

    <!--我的收藏-->
    <string name="all_my_collections">My Collection</string>

    <!--我的分享-->
    <string name="all_my_share">My Share</string>

    <!--设置页面-->
    <string name="all_setting">Setting</string>
    <!--语言设置-->
    <string name="all_setting_switch_language">Languages</string>
    <string name="all_setting_language_following_system">Follow up system</string>
    <string name="all_setting_language_chinese">Chinese</string>
    <string name="all_setting_language_english">English</string>
    <!--调试模式-->
    <string name="all_setting_debug_title">Debug Mode</string>
    <string name="all_setting_network_debug_title">Network Debug</string>
    <string name="all_setting_network_result">Network Debug Result</string>

    <!--字体大小-->
    <string name="all_setting_font_size">Font scale</string>
    <!--清理缓存-->
    <string name="all_setting_clear_cache">Clear cache</string>
    <!--检查更新-->
    <string name="all_setting_new_version">New Version</string>
    <!--退出登录-->
    <string name="all_setting_logout">Logout</string>
    <string name="all_logout_succeess">Log out successfully</string>

    <!--Behavior-->
    <string name="behavior_app_toolbar">com.coding.zxm.wanandroid.home.AppToolbarBehavior</string>


</resources>