<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_font_scale"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_bg">

    <include layout="@layout/layout_toolbar_back" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.5dp"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_12dp"
        android:paddingEnd="@dimen/margin_12dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_toolbar_back">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/all_setting_switch_language"
                android:textColor="@color/colorMainText"
                android:textSize="@dimen/textsize_16sp" />

            <TextView
                android:id="@+id/tv_setting_switch_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:drawablePadding="@dimen/margin_8dp"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/margin_12dp"
                android:paddingBottom="@dimen/margin_12dp"
                android:text="@string/all_setting_language_following_system"
                android:textColor="@color/colorGrayText"
                android:textSize="@dimen/textsize_16sp"
                app:drawableEndCompat="@drawable/ic_arrow_right_gray_24dp" />

        </RelativeLayout>

        <include layout="@layout/layout_horizontal_divider" />

        <TextView
            android:id="@+id/tv_setting_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/margin_12dp"
            android:paddingBottom="@dimen/margin_12dp"
            android:text="@string/all_setting_font_size"
            android:textColor="@color/colorMainText"
            android:textSize="@dimen/textsize_16sp"
            app:drawableEndCompat="@drawable/ic_arrow_right_gray_24dp" />


        <include layout="@layout/layout_horizontal_divider" />

        <RelativeLayout
            android:id="@+id/layout_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_setting_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_12dp"
                android:paddingBottom="@dimen/margin_12dp"
                android:text="@string/all_setting_clear_cache"
                android:textColor="@color/colorMainText"
                android:textSize="@dimen/textsize_16sp" />

            <TextView
                android:id="@+id/tv_setting_cache_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textColor="@color/colorMainText"
                android:textSize="@dimen/textsize_16sp"
                tools:ignore="RelativeOverlap"
                tools:text="0KB" />
        </RelativeLayout>

        <include layout="@layout/layout_horizontal_divider" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_setting_debug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_12dp"
                android:paddingBottom="@dimen/margin_12dp"
                android:text="@string/all_setting_debug_title"
                android:textColor="@color/colorMainText"
                android:textSize="@dimen/textsize_16sp"
                app:layout_constraintTop_toTopOf="parent" />

            <!--network-->
            <RelativeLayout
                android:id="@+id/layout_net_debug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_setting_debug">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_arrow_right_gray_24dp"
                    android:text="@string/all_setting_network_debug_title"
                    android:textColor="@color/colorMainText"
                    android:textSize="@dimen/textsize_16sp"
                    tools:ignore="UseCompatTextViewDrawableXml" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_setting_network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:checked="false"
                    android:textOff="Off"
                    android:textOn="On"
                    android:theme="@style/AppTheme.Switch"
                    app:showText="true"
                    app:switchTextAppearance="@style/SwitchTextAppearance"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tv_setting_result_network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/switch_setting_network"
                    android:layout_alignParentEnd="true"
                    android:padding="6dp"
                    android:textSize="@dimen/textsize_12sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/all_setting_network_result" />

            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/layout_horizontal_divider" />

        <RelativeLayout
            android:id="@+id/layout_new_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_setting_new_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_12dp"
                android:paddingBottom="@dimen/margin_12dp"
                android:text="@string/all_setting_new_version"
                android:textColor="@color/colorMainText"
                android:textSize="@dimen/textsize_16sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_setting_curr_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorMainText"
                    android:textSize="@dimen/textsize_16sp"
                    tools:ignore="RelativeOverlap"
                    tools:text="1.0.0" />

                <TextView
                    android:id="@+id/tv_setting_version_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_12dp"
                    android:background="@drawable/shape_red_version_bg"
                    android:gravity="center"
                    android:text="new"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/textsize_12sp"
                    android:visibility="visible"
                    tools:ignore="HardcodedText,RelativeOverlap" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </RelativeLayout>

        <include layout="@layout/layout_horizontal_divider" />

        <TextView
            android:id="@+id/tv_setting_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_12dp"
            android:paddingBottom="@dimen/margin_12dp"
            android:text="@string/all_setting_logout"
            android:textColor="@color/colorMainText"
            android:textSize="@dimen/textsize_16sp"
            app:drawableEndCompat="@drawable/ic_arrow_right_gray_24dp" />

        <include layout="@layout/layout_horizontal_divider" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>