<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_dark_bg">

    <TextView
        android:id="@+id/iv_login_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        style="@style/StyleTagPadding"
        android:textSize="@dimen/textsize_18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/icon_white_close"
        android:text="@string/all_cancel"
        android:textColor="@color/colorWhite" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_login_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_50dp"
        android:layout_marginEnd="@dimen/margin_50dp"
        android:background="@drawable/shape_white_bg"
        android:padding="@dimen/margin_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_user_name"
            style="@style/MainPagePadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_gray_rect_bg"
                android:hint="@string/all_user_name"
                android:paddingStart="@dimen/margin_12dp"
                android:paddingTop="6dp"
                android:paddingEnd="@dimen/margin_12dp"
                android:paddingBottom="6dp"
                android:textColor="@color/color_text_black"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="@dimen/textsize_16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            style="@style/MainPagePadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_gray_rect_bg"
                android:hint="@string/all_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/margin_12dp"
                android:paddingTop="6dp"
                android:paddingEnd="@dimen/margin_12dp"
                android:paddingBottom="6dp"
                android:textColor="@color/color_text_black"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="@dimen/textsize_16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/selector_login_btn"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/all_login"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textsize_16sp"
            app:layout_constraintTop_toBottomOf="@+id/layout_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_tips_register"
        style="@style/MainPageMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12dp"
        android:text="@string/all_tips_not_register"
        android:textColor="@color/color_text_gray"
        android:textSize="@dimen/textsize_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_login_content" />

</androidx.constraintlayout.widget.ConstraintLayout>