<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_blue_3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_color_blue_3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@mipmap/icon_mine_user_bg"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_mine_user"
            style="@style/MainPageMargin"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@drawable/shape_white_bg"
            android:padding="@dimen/margin_16dp"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/icon_blue_user"
                app:civ_border_color="@color/colorGrayText"
                app:civ_border_width="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12dp"
                android:text="@string/all_not_login"
                android:textColor="@color/colorMainText"
                android:textSize="@dimen/textsize_18sp"
                app:layout_constraintStart_toEndOf="@+id/iv_user"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_user_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12dp"
                android:text="积分:--"
                android:textColor="@color/colorGrayText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_user"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_sign_bg"
                android:text="@string/all_sign"
                android:textColor="@color/colorWhite"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_user_coin_detial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12dp"
                android:text="@string/all_coin_detial"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!--导航&项目&体系-->

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--签到记录-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_sign_record"
            style="@style/MainPageMargin"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@drawable/shape_white_bg"
            app:layout_constraintTop_toBottomOf="@+id/layout_mine_user">


        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--条目-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_mine_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/layout_sign_record">

            <TextView
                android:id="@+id/tv_mine_collection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:drawableStart="@drawable/ic_like_not_gray_24dp"
                android:drawablePadding="@dimen/margin_6dp"
                android:padding="@dimen/margin_16dp"
                android:text="@string/all_mine_collection"
                android:textColor="@color/colorMainText"
                android:textSize="@dimen/textsize_16sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_mine_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_1dp"
                android:background="@color/colorWhite"
                android:drawableStart="@drawable/ic_action_share_gray_24dp"
                android:drawablePadding="@dimen/margin_6dp"
                android:padding="@dimen/margin_16dp"
                android:text="@string/all_mine_share"
                android:textColor="@color/colorMainText"
                android:textSize="@dimen/textsize_16sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_mine_collection" />

            <TextView
                android:id="@+id/tv_mine_todo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_1dp"
                android:background="@color/colorWhite"
                android:drawableStart="@drawable/ic_todo_gray_24dp"
                android:drawablePadding="@dimen/margin_6dp"
                android:padding="@dimen/margin_16dp"
                android:text="@string/all_mine_todo"
                android:textColor="@color/colorMainText"
                android:textSize="@dimen/textsize_16sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_mine_share" />

            <TextView
                android:id="@+id/tv_mine_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_1dp"
                android:background="@color/colorWhite"
                android:drawableStart="@drawable/ic_about_gray_24dp"
                android:drawablePadding="@dimen/margin_6dp"
                android:padding="@dimen/margin_16dp"
                android:text="@string/all_mine_about"
                android:textColor="@color/colorMainText"
                android:textSize="@dimen/textsize_16sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_mine_todo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
