<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_bg">

    <!--title-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_light_bg"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_search_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_6dp"
            android:src="@mipmap/icon_dark_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12dp"
            android:layout_marginEnd="@dimen/margin_12dp"
            android:background="@drawable/shape_search_bg"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_search_action"
            app:layout_constraintStart_toEndOf="@+id/iv_search_back"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:src="@drawable/ic_search_gray_24dp" />

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_6dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/all_search_hint"
                android:maxLength="30"
                android:textColor="@color/color_text_black"
                android:textColorHint="@color/color_text_gray"
                android:textSize="@dimen/textsize_14sp" />

            <ImageView
                android:id="@+id/iv_search_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/margin_6dp"
                android:src="@mipmap/icon_clear"
                android:visibility="gone" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/tv_search_action"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_6dp"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_6dp"
            android:text="@string/all_search"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/textsize_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RtlSymmetry" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--热词-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_hot_word"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_0_5dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_search">

        <TextView
            android:id="@+id/tv_guess_sou"
            style="@style/ListItemPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:drawableStart="@mipmap/icon_hot"
            android:drawablePadding="@dimen/margin_6dp"
            android:text="@string/all_guess_what"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/textsize_18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_0_5dp"
            android:background="@color/color_text_white"
            app:layout_constraintTop_toBottomOf="@+id/tv_guess_sou" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--搜索结果-->
    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/sr_search_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_0_5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_search">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite" />

        <com.scwang.smart.refresh.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>